@@ -1,5 +1,6 @@
 package com.spring_boots.spring_boots.item.controller;
 
+import com.spring_boots.spring_boots.common.config.GlobalExceptionHandler;
 import com.spring_boots.spring_boots.item.dto.ResponseItemDto;
 import com.spring_boots.spring_boots.item.dto.SearchItemDto;
 import com.spring_boots.spring_boots.item.dto.UpdateItemDto;
@@ -15,11 +16,11 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
+import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
@@ -40,10 +41,33 @@ public class ItemApiControllerTest {
     @InjectMocks
     private ItemApiController itemApiController;
 
+    private ResponseItemDto mockResponseItemDto;
+    private SearchItemDto mockSearchItemDto;
+    private MockMultipartFile mockFile;
+
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
-        mockMvc = MockMvcBuilders.standaloneSetup(itemApiController).build();
+        mockMvc = MockMvcBuilders.standaloneSetup(itemApiController).setControllerAdvice(new GlobalExceptionHandler()).build();
+
+        // 먼저 ResponseItemDto 생성
+        mockResponseItemDto = ResponseItemDto.builder()
+            .id(1L)
+            .itemName("Test Item")
+            .itemPrice(10000L)
+            .itemDescription("Test Description")
+            .itemMaker("Test Maker")
+            .imageUrl("http://test-url.com/test-image.jpg")
+            .build();
+
+        mockSearchItemDto = SearchItemDto.builder()
+            .categoryName("Test Category")
+            .categoryThema("Test Thema")
+            .matchedField("itemName")
+            .build();
+
+        // 테스트용 파일 생성
+        mockFile = new MockMultipartFile("file", "test.jpg", "image/jpeg", "test image content".getBytes());
     }
 
     /*
@@ -76,13 +100,12 @@ public class ItemApiControllerTest {
 
     @Test
     public void testGetItem() throws Exception {
-        ResponseItemDto responseItemDto = new ResponseItemDto();
 
-        when(itemService.getItem(1L)).thenReturn(responseItemDto);
+        when(itemService.getItem(1L)).thenReturn(mockResponseItemDto);
 
         mockMvc.perform(get("/api/items/1"))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON));
+            .andExpect(status().isOk())
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON));
     }
 
     @Test
@@ -90,30 +113,29 @@ public class ItemApiControllerTest {
         doNothing().when(itemService).deleteItem(1L);
 
         mockMvc.perform(delete("/api/items/1"))
-                .andExpect(status().isNoContent());
+            .andExpect(status().isNoContent());
     }
 
     @Test
     public void testUpdateItem() throws Exception {
         UpdateItemDto updateItemDto = new UpdateItemDto();
 
-        ResponseItemDto responseItemDto = new ResponseItemDto();
-
-        when(itemService.updateItem(any(Long.class), any(UpdateItemDto.class))).thenReturn(responseItemDto);
+        when(itemService.updateItem(any(Long.class), any(UpdateItemDto.class))).thenReturn(mockResponseItemDto);
 
         mockMvc.perform(put("/api/items/1")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"field\":\"value\"}"))
-                .andExpect(status().isOk());
+            .andExpect(status().isOk());
     }
 
     // 검색한 아이템들 목록 조회 + 페이지네이션 + 정렬 기능 확인
     @Test
-    @DisplayName("검색, 정렬, 페이징 통합 테스트")
+    @DisplayName("검색, 정렬, 페이징 통합 테스트 - 일반 필드 검색")
     public void testSearchItems() throws Exception {
         // given
-        List<SearchItemDto> searchResults = Arrays.asList(new SearchItemDto(), new SearchItemDto());
-        Page<SearchItemDto> page = new PageImpl<>(searchResults, PageRequest.of(0, 8), 2);
+        String keyword = "test";
+        List<SearchItemDto> searchResults = List.of(mockSearchItemDto);
+        Page<SearchItemDto> page = new PageImpl<>(searchResults, PageRequest.of(0, 8), 1);
 
         String[] sortOptions = {"price-asc", "price-desc", "newest", "best", "default"};
 
@@ -130,8 +152,9 @@ public class ItemApiControllerTest {
                     .param("limit", "8"))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.content", hasSize(2)))
-                .andExpect(jsonPath("$.totalElements").value(2))
+                .andExpect(jsonPath("$.content", hasSize(1)))
+                .andExpect(jsonPath("$.content[0].matchedField").value("itemName"))
+                .andExpect(jsonPath("$.totalElements").value(1))
                 .andExpect(jsonPath("$.totalPages").value(1))
                 .andExpect(jsonPath("$.size").value(8))
                 .andExpect(jsonPath("$.number").value(0));
@@ -140,12 +163,74 @@ public class ItemApiControllerTest {
         }
     }
 
+    @Test
+    @DisplayName("검색, 정렬, 페이징 통합 테스트 - 키워드 검색")
+    public void testSearchItems_KeywordSearch() throws Exception {
+        // given
+        String keyword = "keywordTest";
+        // mockSearchItemDto 복사 및 matchedField 설정
+        SearchItemDto keywordSearchDto = mockSearchItemDto;
+        keywordSearchDto.setMatchedField("keyword");
+
+        List<SearchItemDto> searchResults = List.of(keywordSearchDto);
+        Page<SearchItemDto> page = new PageImpl<>(searchResults, PageRequest.of(0, 8), 1);
+
+        String[] sortOptions = {"price-asc", "price-desc", "newest", "best", "default"};
+
+        for (String sortOption : sortOptions) {
+            // when
+            when(itemService.searchAndSortItems(eq(keyword), eq(sortOption), anyInt(), anyInt()))
+                .thenReturn(page);
+
+            // then
+            mockMvc.perform(get("/api/items/search")
+                    .param("keyword", keyword)
+                    .param("sort", sortOption)
+                    .param("page", "0")
+                    .param("limit", "8"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.content", hasSize(1)))
+                .andExpect(jsonPath("$.content[0].matchedField").value("keyword"))
+                .andExpect(jsonPath("$.totalElements").value(1))
+                .andExpect(jsonPath("$.totalPages").value(1));
+
+            verify(itemService).searchAndSortItems(keyword, sortOption, 0, 8);
+        }
+
+    }
+
     // 빈 문자열의 검색어를 받는 경우
     @Test
+    @DisplayName("검색어가 누락되는 경우 - BadReqeust")
     public void testSearchItems_WithEmptyKeyword() throws Exception {
         mockMvc.perform(get("/api/items/search")
                 .param("page", "0")
                 .param("limit", "8"))
             .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    @DisplayName("검색 결과가 없는 경우")
+    public void testSearchItems_NoResults() throws Exception {
+        // given
+        String keyword = "nonexistent";
+        Page<SearchItemDto> emptyPage = new PageImpl<>(List.of(), PageRequest.of(0, 8), 0);
+
+        // when
+        when(itemService.searchAndSortItems(eq(keyword), anyString(), anyInt(), anyInt()))
+            .thenReturn(emptyPage);
+
+        // then
+        mockMvc.perform(get("/api/items/search")
+                .param("keyword", keyword)
+                .param("sort", "default")
+                .param("page", "0")
+                .param("limit", "8"))
+            .andExpect(status().isOk())
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+            .andExpect(jsonPath("$.content", hasSize(0)))
+            .andExpect(jsonPath("$.totalElements").value(0))
+            .andExpect(jsonPath("$.totalPages").value(0));
     }
 }
